Added Purple Grass
Maybe? Can't test.

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/BubbleGang/Girls/BubbleWoman_BPs
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -218,26 +218,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
-MRUItem1=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
-MRUItem2=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
-MRUItem3=/Game/BubbleGang/Girls/BubbleGirl_Ani
-MRUItem4=/Game/BubbleGang/Girls/BubbleGirl_Blend
-MRUItem5=/Game/BubbleGang/Girls/BubbleGirl_BP
-MRUItem6=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem7=/Game/BubbleGang/Boys/BubbleBoy_BP
-MRUItem8=/Game/BubbleGang/Boys/BubbleBoy_Anim
-MRUItem9=/Game/BubbleGang/Boys/BubbleBoy_Blend
-MRUItem10=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
-MRUItem11=/Game/BubbleGang/Boys/HappyIdleBubbleBoy_Anim_mixamo_com
-MRUItem12=/Game/BubbleGang/Boys/BubbleMan_BP
-MRUItem13=/Game/Gnome_Animated/ChefGnome/Chef_Ani
-MRUItem14=/Game/Gnome_Animated/ChefGnome/Chef_Blend
-MRUItem15=/Game/BubbleGang/Boys/BubbleMan_Blend
-MRUItem16=/Game/BubbleGang/Boys/BubbleMan_Anim
-MRUItem17=/Game/BubbleGang/BubbleGirl
-MRUItem18=/Game/BubbleGang/BubbleGirl_Anim
-MRUItem19=/Game/BubbleGang/HappyIdleBubbleMan_Anim_mixamo_com
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
+MRUItem2=/Game/Geometry/Meshes/Material__5
+MRUItem3=/Game/Geometry/Meshes/SM_ToonGrass
+MRUItem4=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
+MRUItem5=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
+MRUItem6=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
+MRUItem7=/Game/BubbleGang/Girls/BubbleGirl_Ani
+MRUItem8=/Game/BubbleGang/Girls/BubbleGirl_Blend
+MRUItem9=/Game/BubbleGang/Girls/BubbleGirl_BP
+MRUItem10=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem11=/Game/BubbleGang/Boys/BubbleBoy_BP
+MRUItem12=/Game/BubbleGang/Boys/BubbleBoy_Anim
+MRUItem13=/Game/BubbleGang/Boys/BubbleBoy_Blend
+MRUItem14=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
+MRUItem15=/Game/BubbleGang/Boys/HappyIdleBubbleBoy_Anim_mixamo_com
+MRUItem16=/Game/BubbleGang/Boys/BubbleMan_BP
+MRUItem17=/Game/Gnome_Animated/ChefGnome/Chef_Ani
+MRUItem18=/Game/Gnome_Animated/ChefGnome/Chef_Blend
+MRUItem19=/Game/BubbleGang/Boys/BubbleMan_Blend
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2802,14 +2802,14 @@ BubbleWoman_Ani_C.Notifies=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Destinations\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Destinations\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -2851,10 +2851,10 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -2894,7 +2894,7 @@ ChefGnome_C=
 Spring_Gnome_C="\"Object.Default.Destinations\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Mush_Gnome_C="\"Object.Default.Destinations\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Lever_C=
-CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+CapsuleComponent=
 Mush3Pedestal_C=
 Mush1Pedestal_C=
 Mush3_C="\"Object.Default.Destinations\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
@@ -3425,6 +3425,8 @@ None=======
 /Game/BubbleGang/Girls/BubbleGirl_Blend.BubbleGirl_Blend=1
 /Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend.BubbleWoman_Blend=1
 /Game/BubbleGang/Boys/ManBPs/BubbleMan_BP.BubbleMan_BP=1
+/Game/Geometry/Meshes/Material__5.Material__5=1
+/Game/Geometry/Meshes/SM_ToonGrass.SM_ToonGrass=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3509,7 +3511,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../Users/jedie/OneDrive/Documents/GitHub/Serotopia V3/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../RobinDocs/GameDev/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5078,10 +5080,10 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/PersistentLevel
-MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/PersistentLevel
 MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Levels/ForestBackup
 MRUItem6=/Game/Levels/Sewer
@@ -5093,7 +5095,7 @@ MRUItem11=/Game/Levels/testMagenta
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5622,7 +5624,6 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
