minor sewer edits

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/NewSewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -214,30 +214,31 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Levels/NewSewer.NewSewer:PersistentLevel.NewSewer
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
-MRUItem2=/Game/Geometry/Meshes/Material__5
-MRUItem3=/Game/Geometry/Meshes/SM_ToonGrass
-MRUItem4=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
-MRUItem5=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
-MRUItem6=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
-MRUItem7=/Game/BubbleGang/Girls/BubbleGirl_Ani
-MRUItem8=/Game/BubbleGang/Girls/BubbleGirl_Blend
-MRUItem9=/Game/BubbleGang/Girls/BubbleGirl_BP
-MRUItem10=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem11=/Game/BubbleGang/Boys/BubbleBoy_BP
-MRUItem12=/Game/BubbleGang/Boys/BubbleBoy_Anim
-MRUItem13=/Game/BubbleGang/Boys/BubbleBoy_Blend
-MRUItem14=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
-MRUItem15=/Game/BubbleGang/Boys/HappyIdleBubbleBoy_Anim_mixamo_com
-MRUItem16=/Game/BubbleGang/Boys/BubbleMan_BP
-MRUItem17=/Game/Gnome_Animated/ChefGnome/Chef_Ani
-MRUItem18=/Game/Gnome_Animated/ChefGnome/Chef_Blend
-MRUItem19=/Game/BubbleGang/Boys/BubbleMan_Blend
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
+MRUItem3=/Game/Geometry/Meshes/Material__5
+MRUItem4=/Game/Geometry/Meshes/SM_ToonGrass
+MRUItem5=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
+MRUItem6=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
+MRUItem7=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
+MRUItem8=/Game/BubbleGang/Girls/BubbleGirl_Ani
+MRUItem9=/Game/BubbleGang/Girls/BubbleGirl_Blend
+MRUItem10=/Game/BubbleGang/Girls/BubbleGirl_BP
+MRUItem11=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem12=/Game/BubbleGang/Boys/BubbleBoy_BP
+MRUItem13=/Game/BubbleGang/Boys/BubbleBoy_Anim
+MRUItem14=/Game/BubbleGang/Boys/BubbleBoy_Blend
+MRUItem15=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
+MRUItem16=/Game/BubbleGang/Boys/HappyIdleBubbleBoy_Anim_mixamo_com
+MRUItem17=/Game/BubbleGang/Boys/BubbleMan_BP
+MRUItem18=/Game/Gnome_Animated/ChefGnome/Chef_Ani
+MRUItem19=/Game/Gnome_Animated/ChefGnome/Chef_Blend
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -5080,8 +5081,8 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Levels/Bubbleopolis
 MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/PersistentLevel
 MRUItem4=/Game/Levels/MainMenu
@@ -5413,7 +5414,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 SkeletalMeshComponent=
 PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
@@ -5500,7 +5501,7 @@ StaircaseBP_C=Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 DisappearBridge_C=
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
-gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 NewSewer_C=
 TargetPoint=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 BluePaintPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
