--- a/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Config/DefaultEngine.ini
@@ -6,7 +6,7 @@ DefaultMediaSoundClassName=/Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/Gamemodes/Mechanic_Test.Mechanic_Test_C
 EditorStartupMap=/Game/Levels/Forest.Forest
-GameDefaultMap=/Game/Levels/Forest.Forest
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GameInstanceClass=/Game/Blueprints/UI/MyGameInstance.MyGameInstance_C
 
 [/Script/Engine.RendererSettings]
