--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -218,10 +218,10 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
-MRUItem2=/Game/Geometry/Meshes/Material__5
-MRUItem3=/Game/Geometry/Meshes/SM_ToonGrass
+MRUItem0=/Game/Geometry/Meshes/Material__5
+MRUItem1=/Game/Geometry/Meshes/SM_ToonGrass
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
 MRUItem4=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
 MRUItem5=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
 MRUItem6=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
@@ -5597,9 +5597,9 @@ DeleteVariableInUse_Warning=False
 
 [FoliageEdit]
 Radius=712.901855
-Radius=80.000000
+Radius=110.715820
 PaintDensity=0.700000
-PaintDensity=0.040000
+PaintDensity=1.000000
 WindowPosition=-1,-1,284,400
 WindowPosition=-1,-1,284,400
 bFilterFoliage=False
@@ -5624,6 +5624,7 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
