Fog back in forest
Foggy

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -214,9 +214,8 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Levels/NewSewer.NewSewer:PersistentLevel.NewSewer
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/NewSewer
@@ -4893,7 +4892,7 @@ StatsViewer.TimeStamp=2021.03.22-23.04.03
 StatsViewer.LastCompileMethod=External
 StatsViewer.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2021.01.28-02.42.45
-HierarchicalLODUtilities.TimeStamp=2021.02.15-00.29.26
+HierarchicalLODUtilities.TimeStamp=2021.03.22-23.03.37
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 HierarchicalLODUtilities.LastCompileMethod=External
 CollectionManager.TimeStamp=2021.02.03-03.51.46
@@ -5081,9 +5080,9 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/PersistentLevel
 MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Levels/ForestBackup
@@ -5524,6 +5523,7 @@ BubbleWoman_Ani_C=
 BubbleWoman_BP_C=BoxComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/LadderClimb/Ladder_BP.Ladder_BP;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -5543,7 +5543,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
 RecentlyPlaced=/Game/Geometry/Meshes/Pipes/PipeU.PipeU;
 RecentlyPlaced=/Game/Geometry/Meshes/Pipes/PipeShort.PipeShort;
-RecentlyPlaced=/Game/SewerLadder/SewerLadder.SewerLadder;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
