working on boat fuckery
adjusting splines

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.214286
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -214,31 +214,30 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Levels/NewSewer.NewSewer:PersistentLevel.NewSewer
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
-MRUItem3=/Game/Geometry/Meshes/Material__5
-MRUItem4=/Game/Geometry/Meshes/SM_ToonGrass
-MRUItem5=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
-MRUItem6=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
-MRUItem7=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
-MRUItem8=/Game/BubbleGang/Girls/BubbleGirl_Ani
-MRUItem9=/Game/BubbleGang/Girls/BubbleGirl_Blend
-MRUItem10=/Game/BubbleGang/Girls/BubbleGirl_BP
-MRUItem11=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem12=/Game/BubbleGang/Boys/BubbleBoy_BP
-MRUItem13=/Game/BubbleGang/Boys/BubbleBoy_Anim
-MRUItem14=/Game/BubbleGang/Boys/BubbleBoy_Blend
-MRUItem15=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
-MRUItem16=/Game/BubbleGang/Boys/HappyIdleBubbleBoy_Anim_mixamo_com
-MRUItem17=/Game/BubbleGang/Boys/BubbleMan_BP
-MRUItem18=/Game/Gnome_Animated/ChefGnome/Chef_Ani
-MRUItem19=/Game/Gnome_Animated/ChefGnome/Chef_Blend
+MRUItem0=/Game/Sewer/SewerBoat
+MRUItem1=/Game/Sewer/Lever
+MRUItem2=/Game/Player/ThirdPersonCharacter
+MRUItem3=/Game/Levels/NewSewer
+MRUItem4=/Game/Levels/Bubbleopolis
+MRUItem5=/Game/KiteDemo/Environments/Foliage/Grass/FieldGrass/Mat_ToonGrass_Anim
+MRUItem6=/Game/Geometry/Meshes/Material__5
+MRUItem7=/Game/Geometry/Meshes/SM_ToonGrass
+MRUItem8=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Ani
+MRUItem9=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_Blend
+MRUItem10=/Game/BubbleGang/Girls/BubbleWoman_BPs/BubbleWoman_BP
+MRUItem11=/Game/BubbleGang/Girls/BubbleGirl_Ani
+MRUItem12=/Game/BubbleGang/Girls/BubbleGirl_Blend
+MRUItem13=/Game/BubbleGang/Girls/BubbleGirl_BP
+MRUItem14=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem15=/Game/BubbleGang/Boys/BubbleBoy_BP
+MRUItem16=/Game/BubbleGang/Boys/BubbleBoy_Anim
+MRUItem17=/Game/BubbleGang/Boys/BubbleBoy_Blend
+MRUItem18=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com
+MRUItem19=/Game/BubbleGang/Boys/HappyIdleBubbleBoy_Anim_mixamo_com
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2853,7 +2852,7 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2869,7 +2868,7 @@ Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -2894,7 +2893,7 @@ Soap_Character_C="\"Object.Actor.PivotOffset\" "
 ChefGnome_C=
 Spring_Gnome_C="\"Object.Default.Destinations\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
 Mush_Gnome_C="\"Object.Default.Destinations\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
-Lever_C=
+Lever_C="\"Object.NullBoat\" "
 CapsuleComponent=
 Mush3Pedestal_C=
 Mush1Pedestal_C=
@@ -2924,7 +2923,7 @@ LoadingScreen_C=
 UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PersistentLevel_C=
 MainMenu_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-SewerTrack_C="\"Object.Water\" "
+SewerTrack_C=
 Sewer_Ground_WATER__1__Blueprint_C="\"Object.Default.TrackRef\" "
 AllSewerWater_C="\"Object.Default.TrackRef\" "
 NewPlayerController_C=
@@ -3493,7 +3492,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=1065.000 Y=452.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1525.000 Y=889.000
+WindowSize=X=1530.000 Y=894.000
 None=======
 InitiallyMaximized=True
 
@@ -3512,7 +3511,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../RobinDocs/GameDev/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5096,7 +5095,7 @@ MRUItem11=/Game/Levels/testMagenta
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5434,7 +5433,7 @@ AO1E_C=
 disappear_cube_blueprint_C=
 AOE_Magenta_C=
 AOE_Decal_C=
-K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 MySaveGame_C=
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
@@ -5464,9 +5463,9 @@ Mush2__C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Render
 DialogueGetLine_5=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Mush3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 Mush5_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
-SewerBoat_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+SewerBoat_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 Lever_C=
-SewerTrack_C=
+SewerTrack_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 SphereComponent=SphereComponent.Collision.Collision,
 Soap_Character_C=
 WheeledVehicle=
@@ -5524,6 +5523,7 @@ BubbleWoman_Ani_C=
 BubbleWoman_BP_C=BoxComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sewer/Lever.Lever;
 RecentlyPlaced=/Game/LadderClimb/Ladder_BP.Ladder_BP;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -5543,7 +5543,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
 RecentlyPlaced=/Game/Geometry/Meshes/Pipes/PipeU.PipeU;
 RecentlyPlaced=/Game/Geometry/Meshes/Pipes/PipeShort.PipeShort;
-RecentlyPlaced=/Game/SewerLadder/SewerLadder.SewerLadder;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
